--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta content="ie=edge" http-equiv="x-ua-compatible">
-<title>eduardo-perez-app</title>
-<meta content="width=device-width,initial-scale=1" name="viewport">
-<link href="./index.168567a0c7afd21a3ae09fc2aa649c84.css" rel="stylesheet"/>
-</head>
+    <meta charset="UTF-8">
+    <title>ReactJS Boilerplate</title>
+    <base href="/">
+<link href="./styles/style.css" rel="stylesheet"></head>
 <body>
-<div id="root">
-</div>
-<script src="./runtime.a9edc78d5cd6127c9851.js" type="text/javascript"></script>
-<script src="./index.279408418442dc33f511.js" type="text/javascript"></script>
-</body>
+
+    <div id="root"></div>
+<script type="text/javascript" src="vendors.06924092eb17de030c9e.js"></script><script type="text/javascript" src="main.1ae17f61d18c666e4b67.js"></script></body>
 </html>
