--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ReactJS Boilerplate</title>
+    <title>Eduardo Perez</title>
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700" rel="stylesheet">
     <base href="/">
 </head>
 <body>
-
-    <div id="root"></div>
+    <div id="app"></div>
 </body>
 </html>
